--- a/postgres/common-cluster.yaml
+++ b/postgres/common-cluster.yaml
@@ -14,6 +14,10 @@ spec:
     - superuser
     - createdb
     - login
+    fa_auth_su:
+    - superuser
+    - createdb
+    - login
     xbot.su:
     - superuser
     - createdb
@@ -21,7 +25,7 @@ spec:
   databases:
     xbot: xbot.su
     fa_user_db: fa_user
-    fa_auth_db: fa_user
+    fa_auth_db: fa_auth_su
     fa_group_db: fa_user
     fa_category_db: fa_user
   postgresql:
