--- a/postgres/common-cluster.yaml
+++ b/postgres/common-cluster.yaml
@@ -24,5 +24,6 @@ spec:
     fa_auth_db: fa_user
     fa_group_db: fa_user
     fa_category_db: fa_user
+    fa_account_db: fa_user
   postgresql:
     version: "14"
