--- a/kafka/kafka-topic.yaml
+++ b/kafka/kafka-topic.yaml
@@ -1,11 +1,11 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaTopic
 metadata:
-  name: test-topic
+  name: permissio-update-event
   labels:
     strimzi.io/cluster: kafka-common
 spec:
-  partitions: 2
+  partitions: 1
   replicas: 1
   config:
     retention.ms: 7200000
