--- a/kafka/kafka-topic.yaml
+++ b/kafka/kafka-topic.yaml
@@ -1,7 +1,7 @@
 apiVersion: kafka.strimzi.io/v1beta2
 kind: KafkaTopic
 metadata:
-  name: permissio-update-event
+  name: permission-update-event
   labels:
     strimzi.io/cluster: kafka-common
 spec:
